--- a/src/modules/App/components/Menu/Menu.module.scss
+++ b/src/modules/App/components/Menu/Menu.module.scss
@@ -1,11 +1,11 @@
 @use '@styles/vars' as *;
 
 .menu {
+  z-index: 100;
   pointer-events: none;
 
-  z-index: 100;
+  inset: 0;
   position: fixed;
-  inset: $header-height-p + $header-bottom-shadow - 0.2px 0 0 0;
 
   opacity: 0;
   transform: translateX(100%);
@@ -20,20 +20,21 @@
   }
 
   &--open {
+    opacity: 1;
     pointer-events: all;
     transform: translateX(0);
-    opacity: 1;
   }
 
   &__content {
     display: flex;
     flex-direction: column;
     justify-content: space-between;
+
     height: 100%;
   }
 
   &__top {
-    padding-block: 24px;
+    padding-block: 24px + $header-height-p + $header-bottom-shadow;
   }
 
   &__bottom {
